--- a/pages/info/info.wxss
+++ b/pages/info/info.wxss
@@ -85,6 +85,15 @@ page {
   color: #ccc;
   float: right;
 }
+.contact {
+  display: block;
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  background: #fff;
+  margin-top: 20rpx;
+  font-size: 28rpx;
+}
 
 
 /* 地址模板样式 */
