--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -3,7 +3,7 @@ page{
   height: 100%;
 }
 .scroll {
-  padding-bottom: 50rpx;
+  padding-bottom: 90rpx;
   box-sizing: border-box;
   height: 100%;
 }
@@ -51,8 +51,6 @@ page{
  -webkit-transform: translateX(0);
  transform: translateX(0);
 }
-
-
 
 .details-left {
   float: left;
@@ -134,6 +132,7 @@ page{
   float: left;
 }
 
+/* 底部固定栏 */
 .bottom_fixed {
   height: 90rpx; 
   width: 100%;
@@ -142,10 +141,11 @@ page{
   bottom: 0;
   left: 0;
   border-top: 2rpx solid #ddd;
+  background: #fff;
 }
 .bottom_left {
   float: left;
-  width: 60%;
+  /* width: 60%; */
   height: 50rpx;
   margin-right: 5%;
   /* margin-left: 5%; */
@@ -182,6 +182,7 @@ page{
   background: red;
   color: #fff;
   text-align: center;
+  border-radius: 5rpx;
 }
 
 /* 购物车为空样式 */
