--- a/pages/acount/acount.wxml
+++ b/pages/acount/acount.wxml
@@ -1,6 +1,7 @@
 <!--pages/acount/acount.wxml-->
 <scroll-view scroll-y = "true" class = "acount">
-  <view class = "addressList" wx:for = "{{addressList}}" wx:key = "{{index}}" wx:if = "{{item.checked}}">
+<!-- 收货人地址 -->
+  <view class = "addressList" wx:for = "{{addressList}}" wx:key = "{{index}}" wx:if = "{{item.checked}}" bindtap = "toAddressList">
     <view class = "detail">
       <text class = "detail_name">收货人：{{item.name}}</text>
       <text class = "detail_tel">收货电话：{{item.tel}}</text>
@@ -11,10 +12,47 @@
     <image class = "right" src = "../right.png"></image>
     <image class = "envelope" src = "../envelope.png"></image>
   </view>
+  <!-- 商品列表 -->
+  <view class = "goodslist">
+    <view class = "details" wx:for = "{{cart}}" wx:key = "{{index}}" wx:if = "{{item.isSelect}}">
+      <view class = "details-left">
+        <image class = "details-img" src="{{imgUrl+item.imgurl}}"  data-id = "{{item.ID}}" bindtap='toDetail'></image>
+        <view class = "details-desc">
+          <view class = "details-name">{{item.name}}</view>
+          <view class = "details-sales details-price ">￥{{item.nowPrice}}</view>
+        </view>
+      </view>
+      <view class = "details-right details-sales">x {{item.qty}}</view>
+    </view> 
+  </view>
+  <!-- 配送方式 -->
+  <view class = "send">
+    配送方式
+    <text class = "send_select"></text>
+    <image class = "send_right" src = "../right.png"></image>
+  </view>
+  <!-- 支付方式 -->
+  <view class = "paid">
+    支付方式
+    <text class = "paid_select"></text>
+    <image class = "paid_right" src = "../right.png"></image>
+  </view>
+  <!-- 买家留言 -->
+  <view class = "msg">
+    买家留言
+    <input class = "msg_write" placeholder='选填' />
+  </view>
+  <!-- 商品数量 -->
+  <view class = "count">
+    共 <text class = "num">{{qty}}</text> 件商品 总计：￥
+    <text class = "price">{{price}}</text>
+  </view>
 </scroll-view>
+
+<!-- 底部按钮 -->
 <view class = "bottom">
   <view class = "total">
-    实付: <text class = "totalPrice">￥{{totalPrice}}</text>
+    实付: <text class = "totalPrice">￥{{price}}</text>
   </view>
   <view class = "submit" bindtap = "acount">
     提交订单
