--- a/pages/acount/acount.wxss
+++ b/pages/acount/acount.wxss
@@ -2,12 +2,12 @@
 page {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
   background: #ddd;
 }
 .acount {
-  flex: 1;
+  padding-bottom: 100rpx;
+  box-sizing: border-box;
+  height: 100%;
 }
 
 /* 地址样式 */
@@ -50,11 +50,90 @@ page {
   height: 1000rpx;
   width: 10rpx;
 }
+
+/* 商品样式 */
+.goodslist {
+  background: #fff;
+  margin-bottom: 20rpx;  
+}
+.details {
+  height: 200rpx;
+  width: 100%;
+  padding: 20rpx;
+  border-bottom: 2rpx solid #ccc;
+  font-size: 26rpx;
+  position: relative;
+}
+.details-left {
+  float: left;
+  width: 80%;
+  height: 100%;
+}
+.details-left .details-img {
+  height: 100%;
+  width: 200rpx;
+  float: left;
+}
+.details-desc {
+  float: left;
+  margin-left: 5%;
+  margin-top: 10%;
+  width: 45%;
+}
+.details-name {
+  margin-bottom: 10rpx;
+}
+.details-right {
+  float: right;
+  width: 20%;
+  padding-right: 30rpx;
+  box-sizing: border-box;
+  height: 100%;
+  text-align: center;
+  line-height: 160rpx;
+}  
+/* 配送样式、支付样式、买家留言 */
+.send, .paid, .msg, .count {
+  height: 80rpx;
+  line-height: 80rpx;
+  padding-left: 20rpx;
+  font-size: 28rpx;
+  background: #fff;
+  position: relative;
+  border-bottom: 2rpx solid #ddd;
+}
+.msg_write {
+  float: right;
+  width: 75%;
+  height: 80rpx;
+  text-align: right;
+  padding-right: 40rpx;
+}
+
+.send_right, .paid_right {
+  position: absolute;
+  right: 20rpx;
+  top: 10rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+.count {
+  text-align: right;
+  padding-right: 40rpx;
+}
+.price {
+  color: red;
+}
 /* 底部样式 */
 .bottom {
+  position: fixed;
+  left: 0;
+  bottom: 0;
   height: 100rpx;
+  width: 100%;
   background: #fff;
   font-size: 28rpx;
+  border-top: 2rpx solid #ddd;
 }
 .total {
   float: left;
@@ -69,9 +148,9 @@ page {
 .submit {
   float: right;
   width: 30%;
-  height: 60rpx;
-  line-height: 60rpx;
-  margin-top: 20rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  margin-top: 15rpx;
   margin-right: 20rpx;
   text-align: center;
   border-radius: 5rpx;
