--- a/pages/acount/acount.wxss
+++ b/pages/acount/acount.wxss
@@ -1,4 +1,5 @@
 /* pages/acount/acount.wxss */
+@import '../../template/template.wxss';
 page {
   width: 100%;
   height: 100%;
@@ -101,6 +102,10 @@ page {
   background: #fff;
   position: relative;
   border-bottom: 2rpx solid #ddd;
+}
+.paid_select, .send_select {
+  float: right;
+  margin-right: 100rpx;
 }
 .msg_write {
   float: right;
