--- a/template/template.wxss
+++ b/template/template.wxss
@@ -93,3 +93,63 @@ picker-view-column view{
   margin-top: 89rpx; 
   background-color: #eeeeee;
 }
+
+/* 支付方式样式 */
+.paid-wrapper {
+  display: flex;  
+  position: fixed;
+  left: 0;
+  bottom:0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+}
+.paid-element {
+  /* display: flex; */
+  position: fixed;
+  width: 100%;
+  height: 500rpx;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 1);
+  font-size: 28rpx;
+}
+.paid-method {
+  height: 100rpx;
+  width: 100%;
+  line-height: 100rpx;
+  text-align: center;
+  position: relative;
+  border-bottom: 2rpx solid #ddd;
+}
+.delete {
+  position: absolute;
+  right: 20rpx;
+  top: 20rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+.paid-wx, .paid-alipay, .paid-union {
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: left;
+  padding-left: 80rpx;
+  position: relative;
+  box-sizing:border-box;
+  border-bottom: 2rpx solid #ddd;
+}
+.wx, .alipay, .union {
+  position: absolute;
+  left: 20rpx;
+  top: 20rpx;
+  width: 40rpx;
+  height: 40rpx;
+}
+.select, .unselect {
+  position: absolute;
+  right: 20rpx;
+  top: 20rpx;
+  width: 40rpx;
+  height: 40rpx;
+}
