订单更新，注意下单后重新刷新购物车这个功能，暂时调用app.onShow(),但其属于异步请求，注意！

--- a/pages/acount/acount.wxml
+++ b/pages/acount/acount.wxml
@@ -43,7 +43,7 @@
   <!-- 买家留言 -->
   <view class = "msg">
     买家留言
-    <input class = "msg_write" placeholder='选填' />
+    <input class = "msg_write" placeholder='选填' bindblur='getMsg'/>
   </view>
   <!-- 商品数量 -->
   <view class = "count">
