--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,1 +1,66 @@
 /* pages/order/order.wxss */
+page {
+  font-size: 28rpx;
+  background: #ddd;
+}
+.orders {
+  margin-bottom: 20rpx;
+  padding: 20rpx;
+  background: #fff;
+}
+.time {
+  width: 100%;
+  height: 60rpx;
+  line-height: 60rpx;
+  border-bottom: 2rpx solid #ddd;
+}
+.createTime {
+  float: left;
+  width: 80%;
+  height: 100%;
+  line-height: 60rpx;
+}
+.status {
+  float: right;
+  width: 20%;
+  height: 100%;
+  line-height: 60rpx;
+  text-align: right;
+  /* padding-right: 20rpx; */
+  box-sizing: border-box;
+}
+.goods {
+  padding: 20rpx;
+  height: 120rpx;
+}
+.imgs {
+  height: 120rpx;
+  width: 120rpx;
+  float: left;
+  margin-right: 20rpx;
+}
+.details {
+  float: left;
+  margin-top: 20rpx;
+  width: 370rpx;
+}
+.total {
+  width: 100%;
+  height: 50rpx;
+  line-height: 50rpx;
+  position: relative;
+}
+.num {
+  height: 100%;
+}
+.toPaid {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 140rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  border: 2rpx solid red;
+  text-align: center;
+  color: red;
+}
