--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,5 +1,10 @@
 <!--pages/order/order.wxml-->
-<view>订单列表</view>
+<!-- 当前用户没有订单时 -->
+<view class = "none" wx:if = "{{orders.length <= 0}}">
+  <view class = "tips">您还没有相关订单哦！</view>
+</view>
+
+<!-- 当前用户存在订单时 -->
 <view class = "orders" wx:for = "{{orders}}" wx:key = "{{index}}" data-id = "{{index}}" bindtap = "orderDetail">
   <view class = "time">
     <view class = "createTime">下单时间：{{item.createTime}}</view>
