--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,4 +1,25 @@
 /* pages/order/order.wxss */
+/* 当前用户没有订单时； */
+.none {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  /* position: relative; */
+}
+.tips {
+  width: 100%;
+  height: 60rpx;
+  line-height: 60rpx;
+  font-size: 34rpx;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+/* 当前用户存在订单时； */
 page {
   font-size: 28rpx;
   background: #ddd;
