--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -12,39 +12,39 @@
 <!-- 全部订单 -->
 <view class = "address" bindtap='toOrders'>
   <text class = "address_text">全部订单</text>
-  <image class = "address_right" src = "../right.png"></image>
+  <image class = "address_right" src = "../libs/imgs/right.png"></image>
   <text class = "checkout" >查看全部订单</text>
 </view>
 <!-- 发货状态 -->
 <view class = "orderlist">
-  <view class = "status unpaid">
-    <image class = "unpaid_img status_img" src = "../unpaid.png"></image>
+  <view class = "status unpaid" bindtap = "unpaid">
+    <image class = "unpaid_img status_img" src = "../libs/imgs/unpaid.png"></image>
     <text class = "unpaid_name status_name">待支付</text>
   </view>
-  <view class = "status undelivery">
-    <image class = "undelivery_img status_img" src = "../undelivery.png"></image>
+  <view class = "status undelivery" bindtap = "undelivery">
+    <image class = "undelivery_img status_img" src = "../libs/imgs/undelivery.png"></image>
     <text class = "undelivery_name status_name">待发货</text>
   </view>
-  <view class = "status receiving">
-    <image class = "receiving_img status_img" src = "../receiving.png"></image>
+  <view class = "status receiving" bindtap = "receiving">
+    <image class = "receiving_img status_img" src = "../libs/imgs/receiving.png"></image>
     <text class = "receiving_name status_name">待收货</text>
   </view>
-  <view class = "status unevaluate">
-    <image class = "unevaluate_img status_img" src = "../unevaluate.png"></image>
+  <view class = "status unevaluate" bindtap = "unevaluate">
+    <image class = "unevaluate_img status_img" src = "../libs/imgs/unevaluate.png"></image>
     <text class = "unevaluate_name status_name">待评价</text>
   </view>
 </view>
 <!-- 购物车 -->
 <view class = "address" bindtap = "toCart">
-  <image class = "address_left" src = "../add_cart.png"></image>
+  <image class = "address_left" src = "../libs/imgs/add_cart.png"></image>
   <text class = "address_text">我的购物车</text>
-  <image class = "address_right" src = "../right.png"></image>
+  <image class = "address_right" src = "../libs/imgs/right.png"></image>
 </view>
 <!-- 地址管理 -->
 <view class = "address"  bindtap = "toAddress">
-  <image class = "address_left" src = "../address.png"></image>
+  <image class = "address_left" src = "../libs/imgs/address.png"></image>
   <text class = "address_text">地址管理</text>
-  <image class = "address_right" src = "../right.png"></image>
+  <image class = "address_right" src = "../libs/imgs/right.png"></image>
 </view>
 <!-- 联系我们 -->
 <button class = "contact" bindtap="contact">联系我们</button>
