--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -64,3 +64,17 @@ page {
   text-align: center;
   color: red;
 }
+
+.none {
+  width: 100%;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 34rpx;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
