--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -91,7 +91,7 @@
 </view>
 <view class = "fixed">
   <view class = "cart" bindtap='toCart'>
-    <image class = "cart_img" src = "../cart_on.png"></image>
+    <image class = "cart_img" src = "../libs/imgs/cart_on.png"></image>
     <text class = "qty" wx:if = "{{qty!==0}}">{{qty}}</text>
   </view>
   <view class = "add" bindtap="add">加入购物车</view>
