--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -3,22 +3,17 @@
 .none {
   width: 100%;
   height: 100%;
-  background: #fff;
-  /* position: relative; */
-}
-.tips {
-  width: 100%;
-  height: 60rpx;
-  line-height: 60rpx;
   font-size: 34rpx;
+  position: fixed;
   text-align: center;
-  position: absolute;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
   margin: auto;
+  /* position: relative; */
 }
+
 /* 当前用户存在订单时； */
 page {
   font-size: 28rpx;
