--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -48,8 +48,8 @@
   <!-- <slider bindchange="durationChange" show-value min="500" max="2000"/> 延长时间 -->
 
   <!-- 会员中心 -->
-  <view class = "section-item" bindtap = "api">
-    <view class = "member">
+  <view class = "section-item" >
+    <view class = "member" bindtap = "toInfo">
       <image class = "member-img" src = "../libs/imgs/member.jpg"></image>
     </view>
     <view class = "gift">
