--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -20,18 +20,22 @@
   <view class = "status unpaid" bindtap = "unpaid">
     <image class = "unpaid_img status_img" src = "../libs/imgs/unpaid.png"></image>
     <text class = "unpaid_name status_name">待支付</text>
+    <text class = "num" wx:if = "{{qty.unpaid > 0}}">{{qty.unpaid}}</text>
   </view>
   <view class = "status undelivery" bindtap = "undelivery">
     <image class = "undelivery_img status_img" src = "../libs/imgs/undelivery.png"></image>
     <text class = "undelivery_name status_name">待发货</text>
+    <text class = "num" wx:if = "{{qty.undelivery > 0}}">{{qty.undelivery}}</text>
   </view>
   <view class = "status receiving" bindtap = "receiving">
     <image class = "receiving_img status_img" src = "../libs/imgs/receiving.png"></image>
     <text class = "receiving_name status_name">待收货</text>
+    <text class = "num" wx:if = "{{qty.receiving > 0}}">{{qty.receiving}}</text>
   </view>
   <view class = "status unevaluate" bindtap = "unevaluate">
     <image class = "unevaluate_img status_img" src = "../libs/imgs/unevaluate.png"></image>
     <text class = "unevaluate_name status_name">待评价</text>
+    <text class = "num" wx:if = "{{qty.unevaluate > 0}}">{{qty.unevaluate}}</text>
   </view>
 </view>
 <!-- 购物车 -->
